--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (15.12.2mx15) mx; urgency=medium
+
+  * fixed cleanning code
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 04 Dec 2015 17:17:37 -0500
+
 mx-snapshot (15.12.1mx15) mx; urgency=medium
 
   * new build
