--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (15.12.9mx15) mx; urgency=medium
+
+  * fixed bug that crashed app when selecting different folder
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 16 Dec 2015 13:31:41 -0500
+
 mx-snapshot (15.12.8mx15) mx; urgency=medium
 
   * put bind-root in a hidden folder, mount read-only
