--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (15.12.13mx15) mx; urgency=medium
+
+  * hide GUI when displaying help/license
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 22 Dec 2015 22:45:15 -0500
+
 mx-snapshot (15.12.12mx15) mx; urgency=medium
 
   * split iso-template in a different package 
