--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (16.1mx15) mx; urgency=medium
+
+  * new build that uses new template-initrd.gz
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 07 Jan 2016 12:19:50 -0500
+
 mx-snapshot (15.12.15mx15) mx; urgency=medium
 
   * new build
