add exclusion list to /etc, create a symlink to the old place

--- a/debian/install
+++ b/debian/install
@@ -2,7 +2,7 @@ license.html			usr/share/doc/mx-snapshot
 mx-snapshot 			usr/bin
 mx-snapshot.desktop		usr/share/applications
 mx-snapshot.conf		etc
-mx-snapshot-exclude.list	usr/local/share/excludes
+mx-snapshot-exclude.list	etc 
 mx-snapshot.svg			usr/share/pixmaps
 scripts/copy-initrd-modules	usr/share/mx-packageinstaller/scripts
 scripts/copy-initrd-programs	usr/share/mx-packageinstaller/scripts
