--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (18.8.2) mx; urgency=medium
+
+  * fix icon other themes
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 11 Aug 2018 22:55:49 -0400
+
 mx-snapshot (18.8.1) mx; urgency=medium
 
   * fix cleanup if canceled
