--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (18.8.3) mx; urgency=medium
+
+  * enable saving snapshot to NTFS and FAT32 partitions
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 12 Aug 2018 16:36:33 -0400
+
 mx-snapshot (18.8.2) mx; urgency=medium
 
   * fix icon other themes
