exclude encryption files

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (18.11.1) mx; urgency=medium
+
+  * exclude encryption files
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 28 Nov 2018 22:10:30 -0500
+
 mx-snapshot (18.11) mx; urgency=medium
 
   * create sha512 sum
