--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (18.12.1) mx; urgency=medium
+
+  * make featherpad default editor, set nano as fallback
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 04 Dec 2018 22:41:58 -0500
+
 mx-snapshot (18.12) mx; urgency=medium
 
   * fix quotation, might solve installer icon missing on Desktop
