--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (18.12.2) mx; urgency=medium
+
+  * adjust exclusions
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 10 Dec 2018 09:20:45 -0500
+
 mx-snapshot (18.12.1) mx; urgency=medium
 
   * make featherpad default editor, set nano as fallback
