--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.1.2) mx; urgency=medium
+
+  * add vmd to copy-initrd-modules
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 22 Jan 2019 20:06:36 -0500
+
 mx-snapshot (19.1.1) mx; urgency=medium
 
   * exclude /etc/machine-id
