--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.1.3) mx; urgency=medium
+
+  * add make-efi-img script
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 27 Jan 2019 13:29:03 -0500
+
 mx-snapshot (19.1.2) mx; urgency=medium
 
   * add vmd to copy-initrd-modules
