--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.2) mx; urgency=medium
+
+  * build EFI bootable image
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 06 Feb 2019 14:03:37 -0500
+
 mx-snapshot (19.1.3) mx; urgency=medium
 
   * add make-efi-img script
