--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.3.2) mx; urgency=medium
+
+  * check for compression support in kernel
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 26 Mar 2019 23:57:33 -0400
+
 mx-snapshot (19.3.1) mx; urgency=medium
 
   * exclude home directory for other localized users
