--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.4) mx; urgency=medium
+
+  * updated translations
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 05 Apr 2019 11:53:17 -0400
+
 mx-snapshot (19.3.2) mx; urgency=medium
 
   * check for compression support in kernel
