--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.7) mx; urgency=medium
+
+  * exclude timeshift folders
+
+ -- Adrian <adrian@mxlinux.org>  Mon, 01 Jul 2019 14:39:20 -0400
+
 mx-snapshot (19.5.2) mx; urgency=medium
 
   * updated copy-initrd-modules
