--- a/debian/install
+++ b/debian/install
@@ -3,7 +3,7 @@ mx-snapshot			usr/bin
 mx-snapshot-exclude.list	etc
 mx-snapshot.conf		etc
 mx-snapshot.desktop		usr/share/applications
-mx-snapshot.svg			usr/share/icons/hicolor/scalable/apps
-mx-snapshot.svg			usr/share/pixmaps
+icons/mx-snapshot.png		usr/share/icons/hicolor/48x48/apps
+icons/mx-snapshot.svg		usr/share/icons/hicolor/scalable/apps
 scripts/*			usr/share/mx-packageinstaller/scripts
 translations/*.qm		usr/share/mx-snapshot/locale
