--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.8) mx; urgency=medium
+
+  * change to make it compatible with Buster base
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 11 Aug 2019 21:54:28 -0400
+
 mx-snapshot (19.7.3) mx; urgency=medium
 
   * revised modules
