fix check for misconfigured xdg-user-dir

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.10.03) mx; urgency=medium
+
+  * fix check for misconfigured xdg-user-dir
+
+ -- Adrian <adrian@mxlinux.org>  Wed, 30 Oct 2019 08:13:18 -0400
+
 mx-snapshot (19.10.02) mx; urgency=medium
 
   * fix folder exclusion in /home
