--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.12) mx; urgency=medium
+
+  * faster used space estimation in live environment
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 10 Dec 2019 13:00:33 -0500
+
 mx-snapshot (19.10.04) mx; urgency=medium
 
   * check using trailing slash too
