--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.12.01) mx; urgency=medium
+
+  * use relative location for grep,cat,sed,su,etc for Stretch
+
+ -- Adrian <adrian@mxlinux.org>  Thu, 12 Dec 2019 21:35:22 -0500
+
 mx-snapshot (19.12) mx; urgency=medium
 
   * faster used space estimation in live environment
