--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (19.12.02) mx; urgency=medium
+
+  * fix: mv and grep location in main.cpp
+
+ -- Adrian <adrian@mxlinux.org>  Fri, 13 Dec 2019 09:56:35 -0500
+
 mx-snapshot (19.12.01) mx; urgency=medium
 
   * use relative location for grep,cat,sed,su,etc for Stretch
