--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+mx-snapshot (20.3) mx; urgency=medium
+
+  * add /etc/snapshot_created with date of creation
+
+ -- Adrian <adrian@mx>  Thu, 12 Mar 2020 01:09:26 -0400
+
 mx-snapshot (20.2) mx; urgency=medium
 
-  * updte copy-initrd-modules
+  * update copy-initrd-modules
 
  -- Adrian <adrian@mxlinux.org>  Sun, 02 Feb 2020 12:13:29 -0500
 
