--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (20.6) mx; urgency=medium
+
+  * fix folder quoting
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 06 Jun 2020 01:06:07 -0400
+
 mx-snapshot (20.4.1) mx; urgency=medium
 
   * fix localized folder selection for multiple users >2
