--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (20.10.2) mx; urgency=medium
+
+  * updated translations
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 25 Oct 2020 18:41:43 -0400
+
 mx-snapshot (20.10.1) mx; urgency=medium
 
   * add more network manager storage locations
