--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (21.1.01) mx; urgency=medium
+
+  * Fix select location button
+
+ -- Adrian <adrian@mxlinux.org>  Sat, 23 Jan 2021 22:07:15 -0500
+
 mx-snapshot (21.1) mx; urgency=medium
 
   * rewrite to allow CLI/scripted mode, use -h to list options
