--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (21.1.02) mx; urgency=medium
+
+  * update copy-initrd-modules
+
+ -- Adrian <adrian@mxlinux.org>  Tue, 26 Jan 2021 22:02:39 -0500
+
 mx-snapshot (21.1.01) mx; urgency=medium
 
   * Fix select location button
