--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mx-snapshot (21.1.03) mx; urgency=medium
+
+  * make sure to add "/snapshot" to the snapshot dir
+
+ -- Adrian <adrian@mxlinux.org>  Sun, 31 Jan 2021 13:05:48 -0500
+
 mx-snapshot (21.1.02) mx; urgency=medium
 
   * update copy-initrd-modules
