--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,5 @@
 help/*				usr/share/doc/mx-snapshot
+manual/mx-snapshot.8.gz		usr/share/man/man8
 icons/mx-snapshot.png		usr/share/icons/hicolor/48x48/apps
 icons/mx-snapshot.svg		usr/share/icons/hicolor/scalable/apps
 mx-snapshot			usr/bin
